refactoring, user endpoint
